$Id$

Latest changes:

=== Freetz-1.1-stable ===

- Updated packages and libs:
    * php 5.2.10 (download for 5.2.9 was removed)

=== Freetz-1.1.2 ===

- Updated packages and libs:
    * microperl 5.10.1

- Firmware updates:
   * Please see FIRMWARES for the list of currently supported boxes and firmwares.

See svn log for more details.
 
=== Freetz-1.1.1 ===

- Build system:
  * patch-system: use shell-fuction isFreetzType (by kriegaex)
  * patch-system: use shell function modsed

- New patches (read online help for more info):
    * split tr069-remove-patches 

    * Update usbstorage patches
- Updated packages and libs:
    * callmonitor 1.15.1

- Firmware updates:
   * Please see FIRMWARES for the list of currently supported boxes and firmwares.

=== Freetz-1.1 ===

- Build system:
    * fakeroot: bump version to 1.12.2
    * xdelta: Disable build because we don't make use of it
    * toolchains:
      - add menuconfig option to adjust HOSTCC variable 
      - add ccache for download- and kernel-toolchain
      - add two patches for gcc-3.4.6  
        + Fix failure with newer host gccs  
        + Fix failure on some machines  
    * uClibc-0.9.29: Add 2 patches from openwrt 
    * kernel-toolchain: Add two patches for gcc-3.4.6  
      + Fix failure with newer host gccs  
      + Fix failure on some machines 
    * Bump squashfs3 version to 3.4

- New tools and hooks:
    * external
    * new make targets:
      - check-downloads: checks all downloads for availability (also 
        $(pkg)-check-downloads)
      - mirror: downloads all package downloads into dl/mirror (also
        $(pkg)-download-mirror). This makes hardlinks for dupes in dl/ and
        dl/mirror to save disk space.
    * Add patch that enhances posibilities of /bin/onlinechanged:
      Based on changes by AVM we execute 3 locations on a call to /bin/onlinechanged:
      1. /var/tmp/onlinechanged (compatibility to old behaviour) 
      2. /etc/onlinechanged/*   (new AVM behaviour)