@@ -12,6 +12,7 @@
 			python
 			sed
 			sort
+			tar
 		-w	bison
 		-w	flex
 		-w	intltool-update
