@@ -17,14 +17,11 @@ Quickstart:
   make
 
 This should do the trick. You'll find the modified firmware "*.image"
-in the top-level directory.
+in the image/ subdirectory.
 
 For further information please refer to:
   - http://www.ip-phone-forum.de/forumdisplay.php?f=525
-  - http://wiki.ip-phone-forum.de/software:ds-mod:start
-
-Especially you should install all prerequisites listed here:
-http://wiki.ip-phone-forum.de/software:ds-mod:installation#linux
+  - http://trac.freetz.org
 
 Acknowledgements:
 - DS-Mod was originally named after Daniel Eiband's (special thanks to Daniel)
