@@ -4,6 +4,9 @@ Latest changes:
 
 === Freetz-1.1-stable ===
 
+- Web interface:
+    * added favicon by atomphil (Freetz-Webinterface only)
+
 - Updated packages and libs:
     * php 5.2.10 (download for 5.2.9 was removed)
 
